--- a/pages/css/portfolio.css
+++ b/pages/css/portfolio.css
@@ -1,13 +1,36 @@
 .section {
-    margin: 50px 150px;
+    margin: 20px auto;
+
+    min-width: 250px;
+    max-width: 800px;
+    width: 100%;
+    min-height: 250px;
+    max-height: 540px;
+    height: 100%;
 
     display: flex;
     justify-content: space-between;
 }
 
 .section>div {
-    max-width: 540px;
-    max-height: 500px;
+    min-width: 150px;
+    max-width: 400px;
+    min-height: 150px;
+    max-height: 400px;
+}
+
+@media(max-width: 500px) {
+    .section {
+        flex-direction: column;
+    }
+
+    .section>div {
+        max-width: 250px;
+    }
+
+    .section img {
+        display: none;
+    }
 }
 
 .section img {
@@ -40,6 +63,8 @@
     line-height: 42px;
 
     color: #33323D;
+
+    max-height: 100%;
 }
 
 .section-detalhes-esquerda>div>p,
@@ -53,4 +78,6 @@
     color: #33323D;
 
     mix-blend-mode: normal;
+
+    max-height: 100%;
 }
